atualizações pra resgatar as fks